--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "googleapis": "^169.0.0",
+    "nodemailer": "^7.0.12",
     "pdf-parse": "^1.1.1"
   }
 }
